k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: finplatform
  labels:
    app: frontend
spec:
  replicas: 2          # Frontend is stateless — safe to scale
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: endritmorina1/finplatform-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu:    "100m"
            limits:
              memory: "128Mi"
              cpu:    "200m"
